[workspace]
members = ["tasks/practice-a", "tasks/abc086a", "tasks/abc081a", "tasks/abc081b", "tasks/abc087b", "tasks/abc083b", "tasks/abc088b", "tasks/abc085c", "tasks/abc085b", "tasks/abc049c", "tasks/abc086c", "tasks/abc064a", "tasks/abc219a", "tasks/abc139b", "tasks/abc156c", "tasks/codefestival2016qualbb", "tasks/sumitb2019b", "tasks/abc121b", "tasks/panasonic2020b", "tasks/abc157b", "tasks/abc086b", "tasks/abc074b", "tasks/abc068b", "tasks/abc160c", "tasks/abc014a", "tasks/abc161c", "tasks/abc132c", "tasks/abc142c", "tasks/abc138c", "tasks/abc122b", "tasks/abc094b", "tasks/abc116b"]
